--- a/styles/home.css
+++ b/styles/home.css
@@ -406,7 +406,7 @@
   gap: 2.4rem;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .testimonials .col-1 {
     position: sticky;
     top: 12.8rem;
